Import fonts and added classes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>God of War 4</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/svg-inject.js"></script>
 </head>
@@ -32,31 +34,34 @@
                 <img src="/assets/youtube.svg" onload="SVGInject(this)" />
                 <img src="/assets/twitter.svg" onload="SVGInject(this)" />
             </div>
+            <div class="bx mr-2">
+               
+            </div>
         </nav>
     </header>
 
     <!-- CONTAINER -->
     <section class="container">
         <div class="container-item-1">
-            <p>
+            <div class="px-1">
                 <img src="/assets/god-of-war-logo.png" onload="SVGInject(this)" />
-            </p>
-            <p>
+            </div>
+            <p class="my-2">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vel augue nisl pharetra mi suspendisse
                 dignissim
                 nibh erat turpis. In a magna aliquam viverra enim molestie lorem id.
             </p>
-            <p>
+            <div class="">
                 <a href="#" class="btn">Pre-order now</a>
-                <a href="#" class="btn-secondary">Watch the teaser</a>
-            </p>
-            <p>
-                <img src="/assets/playstation.svg" onload="SVGInject(this)" />
-                <img src="/assets/santamonica.svg" onload="SVGInject(this)" />
-            </p>
+                <a href="#" class="ml-2 btn-secondary">Watch the teaser</a>
+            </div>
+            <div class="mt-2 flex align-items-center">
+                <img src="/assets/playstation.svg" onload="SVGInject(this)" class="w-auto" />
+                <img src="/assets/santamonica.svg" onload="SVGInject(this)" class="ml-2 w-auto"/>
+            </div>
         </div>
         <div class="container-item-2">
-            <img src="/assets/kratos.png" onload="SVGInject(this)" />
+            <img src="/assets/kratos.png" class="kratos" onload="SVGInject(this)" />
         </div>
     </section>
 
