--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>God of War 4</title>
-    <link rel="shortcut icon" href="/assets/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/svg-inject.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/svg-inject.js"></script>
 </head>
 
 <body>
-    <audio autoplay loop class="music">
-        <source src="/assets/gow-song.mp3" type="audio/mp3">
+    <audio autoplay loop>
+        <source src="./assets/gow-song.mp3" type="audio/mp3">
     </audio>
 
     <!-- LOADING -->
     <section class="bg-loader">
-        <img src="/assets/logo.svg" style="max-width: 144px;" class="logo-godofwar" onload="SVGInject(this)" />
+        <img src="./assets/logo.svg" style="max-width: 144px;" class="logo-godofwar" onload="SVGInject(this)" />
     </section>
 
     <!-- HEADER -->
@@ -28,7 +28,7 @@
         <nav class="navbar">
             <div class="nav-menu">
                 <div class="logo">
-                    <img src="/assets/logo.svg" onload="SVGInject(this)" />
+                    <img src="./assets/logo.svg" onload="SVGInject(this)" />
                 </div>
                 <ul class="nav-list">
                     <li><a href="#" class="nav-link">Home</a></li>
@@ -38,10 +38,10 @@
                 </ul>
             </div>
             <div class="nav-social">
-                <img src="/assets/facebook.svg" onload="SVGInject(this)" />
-                <img src="/assets/instagram.svg" onload="SVGInject(this)" />
-                <img src="/assets/youtube.svg" onload="SVGInject(this)" />
-                <img src="/assets/twitter.svg" onload="SVGInject(this)" />
+                <img src="./assets/facebook.svg" onload="SVGInject(this)" />
+                <img src="./assets/instagram.svg" onload="SVGInject(this)" />
+                <img src="./assets/youtube.svg" onload="SVGInject(this)" />
+                <img src="./assets/twitter.svg" onload="SVGInject(this)" />
             </div>
             <div class="bx mr-2">
 
@@ -52,7 +52,7 @@
     <!-- BG VIDEO -->
     <section class="bg-video">
         <video class="video" autoplay muted loop>
-            <source src="/assets/gow-trailer.mp4" type="video/mp4">
+            <source src="./assets/gow-trailer.mp4" type="video/mp4">
         </video>
        
     </section>
@@ -61,7 +61,7 @@
     <section class="container">
         <div class="container-item-1 item-1">
             <div class="px-1">
-                <img src="/assets/god-of-war-logo.png" onload="SVGInject(this)" />
+                <img src="./assets/god-of-war-logo.png" onload="SVGInject(this)" />
             </div>
             <p class="my-2 item-2">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vel augue nisl pharetra mi suspendisse
@@ -73,20 +73,20 @@
                 <a href="#" class="ml-2 btn-secondary">Watch the teaser</a>
             </div>
             <div class="mt-2 flex align-items-center item-4">
-                <img src="/assets/playstation.svg" onload="SVGInject(this)" class="w-auto" />
-                <img src="/assets/santamonica.svg" onload="SVGInject(this)" class="ml-2 w-auto" />
+                <img src="./assets/playstation.svg" onload="SVGInject(this)" class="w-auto" />
+                <img src="./assets/santamonica.svg" onload="SVGInject(this)" class="ml-2 w-auto" />
             </div>
         </div>
         <div class="container-item-2 item-5">
             <div class="js-tilt">
-                <img src="/assets/kratos.png" class="kratos" onload="SVGInject(this)" />
+                <img src="./assets/kratos.png" class="kratos" onload="SVGInject(this)" />
             </div>
         </div>
     </section>
 
     
 
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script>
